--- a/arch/arm/boot/dts/l5510/msm8916-gpu.dtsi
+++ b/arch/arm/boot/dts/l5510/msm8916-gpu.dtsi
@@ -81,26 +81,34 @@
 
 			qcom,gpu-pwrlevel@0 {
 				reg = <0>;
-				qcom,gpu-freq = <400000000>;
+				qcom,gpu-freq = <500000000>;
 				qcom,bus-freq = <3>;
 			};
 
 			qcom,gpu-pwrlevel@1 {
 				reg = <1>;
-				qcom,gpu-freq = <310000000>;
+				qcom,gpu-freq = <370000000>;
 				qcom,bus-freq = <2>;
 			};
 
 			qcom,gpu-pwrlevel@2 {
 				reg = <2>;
-				qcom,gpu-freq = <200000000>;
+				qcom,gpu-freq = <290000000>;
 				qcom,bus-freq = <1>;
 			};
 
 			qcom,gpu-pwrlevel@3 {
 				reg = <3>;
-				qcom,gpu-freq = <19200000>;
+				qcom,gpu-freq = <30200000>;
 				qcom,bus-freq = <0>;
+                        };
+                          
+		        qcom,gpu-pwrlevel@6 {
+                                reg = <6>;
+                                qcom,gpu-freq = <19200000>;
+                                qcom,bus-freq = <0>;
+ 
+                                  };
 			};
 		};
 
