--- a/arch/arm/configs/cyanogenmod_l5510_defconfig
+++ b/arch/arm/configs/cyanogenmod_l5510_defconfig
@@ -1,4 +1,12 @@
+#
+# Automatically generated file; DO NOT EDIT.
+# Linux/arm 3.10.49 Kernel Configuration
+#
+
 CONFIG_SYSVIPC=y
+CONFIG_CROSS_COMPILE=""
+CONFIG_LOCALVERSION="-CyanogenMod"
+CONFIG_LOCALVERSION_AUTO=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -515,7 +523,6 @@ CONFIG_SECCOMP_FILTER=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_PRODUCT_NAME="L5510"
-
 #wangyanhui add start 20150320
 //Line<REQ><JABALL-1500><20150403>add breath led;xiongdajun
 CONFIG_LEDS_QPNP=y
@@ -523,8 +530,6 @@ CONFIG_LEDS_KTD2026=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 #CONFIG_EXTRA_FIRMWARE="PR1624204_s3508_r_9010.img"
 #wangyanhui add end 20150320
-
 #zenghaihui add hall
 CONFIG_HALL_SENSOR=y
-
 CONFIG_SENSORS_MPU6880=y
